[package]
name = "axum-dify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
dify-client = { version = "0.3.1", features = ["rustls-tls"] }
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
